src/net/moraleboost/solrql/lang/SolrqlParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g 2010-03-17 17:00:29

package net.moraleboost.solrql.lang;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class SolrqlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "T_DELETE", "T_INSERT", "T_INTO", "T_VALUES", "T_FIELDS", "T_SELECT", "T_FROM", "T_WHERE", "T_NWHERE", "T_FIELD_ALIAS", "T_ORDER", "T_ORDERING", "T_LIMIT", "T_OFFSET", "T_ASC", "T_DESC", "T_USE", "T_SERVER", "T_AS", "T_COMMIT", "T_ROLLBACK", "T_OPTIMIZE", "T_OPERATOR_OR", "T_OPERATOR_AND", "T_OPERATOR_NOT", "T_OPERATOR_EQUAL_TO_SINGLE", "T_OPERATOR_EQUAL_TO_DOUBLE", "T_OPERATOR_NOT_EQUAL_TO_SINGLE", "T_OPERATOR_NOT_EQUAL_TO_DOUBLE", "T_OPERATOR_LESS_THAN", "T_OPERATOR_LESS_THAN_OR_EQUAL_TO", "T_OPERATOR_GREATER_THAN", "T_OPERATOR_GREATER_THAN_OR_EQUAL_TO", "T_OPERATOR_PLUS", "T_OPERATOR_MINUS", "T_OPERATOR_ADD", "T_OPERATOR_SUBTRACT", "T_OPERATOR_MULTIPLY", "T_OPERATOR_DIVIDE", "T_OPERATOR_CALL", "T_OPERATOR_INDEX", "T_LIST", "SEMICOLON", "OPTIMIZE", "ID", "ROLLBACK", "COMMIT", "USE", "STRING", "AS", "DELETE", "FROM", "INSERT", "INTO", "LPAREN", "COMMA", "RPAREN", "VALUES", "ORDER", "BY", "LIMIT", "INTEGER", "OFFSET", "SELECT", "WHERE", "NWHERE", "OR", "AND", "NOT", "EQUAL_TO_SINGLE", "EQUAL_TO_DOUBLE", "NOT_EQUAL_TO_SINGLE", "NOT_EQUAL_TO_DOUBLE", "LESS_THAN", "LESS_THAN_OR_EQUAL_TO", "GREATER_THAN", "GREATER_THAN_OR_EQUAL_TO", "LSBRACKET", "RSBRACKET", "FLOAT", "TRUE", "FALSE", "NULL", "ASTERISK", "PLUS", "MINUS", "SLASH", "ASC", "DESC", "UNDERSCORE", "QUOTE_DOUBLE", "QUOTE_SINGLE", "BACKSLASH", "BACKTICK", "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z", "STRING_SINGLE", "STRING_DOUBLE", "STRING_CORE_DOUBLE", "STRING_CORE_SINGLE", "STRING_CORE", "STRING_ESCAPE_CORE", "ID_PLAIN", "ID_ESCAPE", "ID_START", "ID_CORE", "ID_ESCAPE_CORE", "EXPONENT", "WS"
    };
    public static final int EXPONENT=135;
    public static final int T_FROM=10;
    public static final int STRING_CORE=128;
    public static final int T_OPERATOR_AND=27;
    public static final int T_OPERATOR_PLUS=37;
    public static final int NOT=72;
    public static final int T_OPTIMIZE=25;
    public static final int EOF=-1;
    public static final int RPAREN=60;
    public static final int T_INTO=6;
    public static final int INSERT=56;
    public static final int T_AS=22;
    public static final int T_OPERATOR_DIVIDE=42;
    public static final int SELECT=67;
    public static final int STRING_ESCAPE_CORE=129;
    public static final int INTO=57;
    public static final int ID_ESCAPE_CORE=134;
    public static final int D=101;
    public static final int E=102;
    public static final int LESS_THAN_OR_EQUAL_TO=78;
    public static final int F=103;
    public static final int G=104;
    public static final int A=98;
    public static final int B=99;
    public static final int C=100;
    public static final int T_OPERATOR_GREATER_THAN_OR_EQUAL_TO=36;
    public static final int ASC=91;
    public static final int L=109;
    public static final int M=110;
    public static final int T_ORDER=14;
    public static final int N=111;
    public static final int O=112;
    public static final int H=105;
    public static final int T_ORDERING=15;
    public static final int I=106;
    public static final int NULL=86;
    public static final int J=107;
    public static final int K=108;
    public static final int QUOTE_DOUBLE=94;
    public static final int U=118;
    public static final int T=117;
    public static final int W=120;
    public static final int T_OPERATOR_LESS_THAN=33;
    public static final int V=119;
    public static final int UNDERSCORE=93;
    public static final int Q=114;
    public static final int SEMICOLON=46;
    public static final int P=113;
    public static final int DELETE=54;
    public static final int S=116;
    public static final int R=115;
    public static final int ROLLBACK=49;
    public static final int Y=122;
    public static final int ID_ESCAPE=131;
    public static final int X=121;
    public static final int Z=123;
    public static final int BACKTICK=97;
    public static final int LSBRACKET=81;
    public static final int T_NWHERE=12;
    public static final int WS=136;
    public static final int NOT_EQUAL_TO_SINGLE=75;
    public static final int T_WHERE=11;
    public static final int OR=70;
    public static final int LESS_THAN=77;
    public static final int T_FIELD_ALIAS=13;
    public static final int QUOTE_SINGLE=95;
    public static final int USE=51;
    public static final int T_SELECT=9;
    public static final int T_OPERATOR_EQUAL_TO_DOUBLE=30;
    public static final int FROM=55;
    public static final int T_COMMIT=23;
    public static final int FALSE=85;
    public static final int GREATER_THAN_OR_EQUAL_TO=80;
    public static final int BACKSLASH=96;
    public static final int EQUAL_TO_DOUBLE=74;
    public static final int WHERE=68;
    public static final int NOT_EQUAL_TO_DOUBLE=76;
    public static final int ID_PLAIN=130;
    public static final int STRING_CORE_DOUBLE=126;
    public static final int ORDER=62;
    public static final int T_LIMIT=16;
    public static final int LIMIT=64;
    public static final int T_INSERT=5;
    public static final int T_USE=20;
    public static final int FLOAT=83;
    public static final int STRING_CORE_SINGLE=127;
    public static final int ID=48;
    public static final int AND=71;
    public static final int LPAREN=58;
    public static final int ASTERISK=87;
    public static final int T_OPERATOR_NOT_EQUAL_TO_SINGLE=31;
    public static final int T_OPERATOR_LESS_THAN_OR_EQUAL_TO=34;
    public static final int T_LIST=45;
    public static final int AS=53;
    public static final int SLASH=90;
    public static final int T_OPERATOR_SUBTRACT=40;
    public static final int COMMA=59;
    public static final int RSBRACKET=82;
    public static final int T_OPERATOR_CALL=43;
    public static final int OFFSET=66;
    public static final int T_OPERATOR_OR=26;
    public static final int PLUS=88;
    public static final int T_OPERATOR_MINUS=38;
    public static final int T_ASC=18;
    public static final int T_OPERATOR_INDEX=44;
    public static final int INTEGER=65;
    public static final int T_OPERATOR_ADD=39;
    public static final int BY=63;
    public static final int NWHERE=69;
    public static final int T_OPERATOR_EQUAL_TO_SINGLE=29;
    public static final int T_OPERATOR_NOT=28;
    public static final int GREATER_THAN=79;
    public static final int T_OPERATOR_NOT_EQUAL_TO_DOUBLE=32;
    public static final int T_VALUES=7;
    public static final int T_OFFSET=17;
    public static final int ID_CORE=133;
    public static final int VALUES=61;
    public static final int T_DESC=19;
    public static final int T_ROLLBACK=24;
    public static final int MINUS=89;
    public static final int T_FIELDS=8;
    public static final int TRUE=84;
    public static final int EQUAL_TO_SINGLE=73;
    public static final int OPTIMIZE=47;
    public static final int COMMIT=50;
    public static final int T_OPERATOR_GREATER_THAN=35;
    public static final int T_SERVER=21;
    public static final int T_DELETE=4;
    public static final int STRING_DOUBLE=125;
    public static final int STRING_SINGLE=124;
    public static final int DESC=92;
    public static final int ID_START=132;
    public static final int T_OPERATOR_MULTIPLY=41;
    public static final int STRING=52;

    // delegates
    // delegators


        public SolrqlParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public SolrqlParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return SolrqlParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g"; }


    public Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow)
    throws RecognitionException
    {
        throw new MismatchedTokenException(ttype, input);
    }


    public static class stmt_list_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stmt_list"
    // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:76:1: stmt_list : ( stmt_core SEMICOLON )* EOF ;
    public final SolrqlParser.stmt_list_return stmt_list() throws RecognitionException {
        SolrqlParser.stmt_list_return retval = new SolrqlParser.stmt_list_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token SEMICOLON2=null;
        Token EOF3=null;
        SolrqlParser.stmt_core_return stmt_core1 = null;


        Object SEMICOLON2_tree=null;
        Object EOF3_tree=null;

        try {
            // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:77:5: ( ( stmt_core SEMICOLON )* EOF )
            // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:77:7: ( stmt_core SEMICOLON )* EOF
            {
            root_0 = (Object)adaptor.nil();

            // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:77:7: ( stmt_core SEMICOLON )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==OPTIMIZE||(LA1_0>=ROLLBACK && LA1_0<=USE)||LA1_0==DELETE||LA1_0==INSERT||LA1_0==SELECT) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:77:8: stmt_core SEMICOLON
            	    {
            	    pushFollow(FOLLOW_stmt_core_in_stmt_list376);
            	    stmt_core1=stmt_core();

            	    state._fsp--;

            	    adaptor.addChild(root_0, stmt_core1.getTree());
            	    SEMICOLON2=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_stmt_list378); 

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_stmt_list383); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        catch (RecognitionException e) {
            throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "stmt_list"

    public static class stmt_core_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stmt_core"
    // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:80:1: stmt_core : ( select_stmt | insert_stmt | delete_stmt | use_stmt | commit_stmt | rollback_stmt | optimize_stmt );
    public final SolrqlParser.stmt_core_return stmt_core() throws RecognitionException {
        SolrqlParser.stmt_core_return retval = new SolrqlParser.stmt_core_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        SolrqlParser.select_stmt_return select_stmt4 = null;

        SolrqlParser.insert_stmt_return insert_stmt5 = null;

        SolrqlParser.delete_stmt_return delete_stmt6 = null;

        SolrqlParser.use_stmt_return use_stmt7 = null;

        SolrqlParser.commit_stmt_return commit_stmt8 = null;

        SolrqlParser.rollback_stmt_return rollback_stmt9 = null;

        SolrqlParser.optimize_stmt_return optimize_stmt10 = null;



        try {
            // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:81:5: ( select_stmt | insert_stmt | delete_stmt | use_stmt | commit_stmt | rollback_stmt | optimize_stmt )
            int alt2=7;
            switch ( input.LA(1) ) {
            case SELECT:
                {
                alt2=1;
                }
                break;
            case INSERT:
                {
                alt2=2;
                }
                break;
            case DELETE:
                {
                alt2=3;
                }
                break;
            case USE:
                {
                alt2=4;
                }
                break;
            case COMMIT:
                {
                alt2=5;
                }
                break;
            case ROLLBACK:
                {
                alt2=6;
                }
                break;
            case OPTIMIZE:
                {
                alt2=7;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:81:7: select_stmt
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_select_stmt_in_stmt_core401);
                    select_stmt4=select_stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, select_stmt4.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:82:7: insert_stmt
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_insert_stmt_in_stmt_core409);
                    insert_stmt5=insert_stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, insert_stmt5.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:83:7: delete_stmt
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_delete_stmt_in_stmt_core417);
                    delete_stmt6=delete_stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, delete_stmt6.getTree());

                    }
                    break;
                case 4 :
                    // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:84:7: use_stmt
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_use_stmt_in_stmt_core425);
                    use_stmt7=use_stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, use_stmt7.getTree());

                    }
                    break;
                case 5 :
                    // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:85:7: commit_stmt
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_commit_stmt_in_stmt_core433);
                    commit_stmt8=commit_stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, commit_stmt8.getTree());

                    }
                    break;
                case 6 :
                    // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:86:7: rollback_stmt
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_rollback_stmt_in_stmt_core441);
                    rollback_stmt9=rollback_stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, rollback_stmt9.getTree());

                    }
                    break;
                case 7 :
                    // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:87:7: optimize_stmt
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_optimize_stmt_in_stmt_core449);
                    optimize_stmt10=optimize_stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, optimize_stmt10.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        catch (RecognitionException e) {
            throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "stmt_core"

    public static class optimize_stmt_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "optimize_stmt"
    // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:90:1: optimize_stmt : OPTIMIZE ( ID )? -> ^( T_OPTIMIZE ( ID )? ) ;
    public final SolrqlParser.optimize_stmt_return optimize_stmt() throws RecognitionException {
        SolrqlParser.optimize_stmt_return retval = new SolrqlParser.optimize_stmt_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token OPTIMIZE11=null;
        Token ID12=null;

        Object OPTIMIZE11_tree=null;
        Object ID12_tree=null;
        RewriteRuleTokenStream stream_OPTIMIZE=new RewriteRuleTokenStream(adaptor,"token OPTIMIZE");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");

        try {
            // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:91:5: ( OPTIMIZE ( ID )? -> ^( T_OPTIMIZE ( ID )? ) )
            // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:91:7: OPTIMIZE ( ID )?
            {
            OPTIMIZE11=(Token)match(input,OPTIMIZE,FOLLOW_OPTIMIZE_in_optimize_stmt466);  
            stream_OPTIMIZE.add(OPTIMIZE11);

            // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:91:16: ( ID )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:91:16: ID
                    {
                    ID12=(Token)match(input,ID,FOLLOW_ID_in_optimize_stmt468);  
                    stream_ID.add(ID12);


                    }
                    break;

            }



            // AST REWRITE
            // elements: ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 92:7: -> ^( T_OPTIMIZE ( ID )? )
            {
                // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:92:10: ^( T_OPTIMIZE ( ID )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(T_OPTIMIZE, "T_OPTIMIZE"), root_1);

                // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:93:20: ( ID )?
                if ( stream_ID.hasNext() ) {
                    adaptor.addChild(root_1, stream_ID.nextNode());

                }
                stream_ID.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        catch (RecognitionException e) {
            throw e;
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "optimize_stmt"

    public static class rollback_stmt_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "rollback_stmt"
    // C:\\Home\\src\\workspace\\solrql\\grammar\\Solrql.g:97:1: rollback_stmt : ROLLBACK ( ID )? -> ^( T_ROLLBACK ( ID )? ) ;
    public final SolrqlParser.rollback_stmt_return rollback_stmt() throws RecognitionException {
        SolrqlParser.rollback_stmt_return retval = new SolrqlParser.rollback_stmt_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ROLLBACK13=null;
        Token ID14=null;

        Object ROLLBACK13_tree=null;
        Object ID14_tree=null;
        RewriteRuleTokenStream stream_ROLLBACK=new RewriteRuleTokenStream(adaptor,"token ROLLBACK");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");

        try {
